array.island.Island.scala.error
Erreur de compilation :
Island:6: error: not found: type len
  for(i<-1 to num:len){
                  ^Island:6: error: type mismatch;
 found   : Array[Int]
 required: Int
  for(i<-1 to num:len){
              ^Island:13: error: not found: type len
    for(i<-1 to num:len){
                    ^Island:13: error: type mismatch;
 found   : Array[Int]
 required: Int
    for(i<-1 to num:len){
                ^Island:18: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
    if(b%2=0){
        ^